--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,7 +16,12 @@ h2 {margin: 0}
 body {
 	background-color: #272822;
 }
+
 .wrapper {
+	display: block;
+	width: 100%;
+}
+.container {
   width: 1200px;
   padding: 0 15px;
   margin: 0 auto; 
@@ -93,7 +98,7 @@ body {
 	width: 100%;
 	height: 800px;
 	border-top: 1px solid #3c3d38;
-	background: url(../img/home-bg.jpg) no-repeat 50% 50%;
+	background: url(../img/home-bg.jpg) no-repeat;
 	background-size: cover;
 }
 
@@ -239,22 +244,28 @@ h2.tagstyle {
 	height: 200px;
 	border: 1px solid #0b0b0a;
 	outline: 1px solid #3c3d38;	
+	overflow: hidden;
 }
 
 .site img {
 	display: block;
+	width: 370px;
+	height: 200px;
 	margin: 0 auto;
 }
 
 .site a {
 	display: block;
-	margin-top: 80px;
+	margin-top: 0;
 	text-align: center;
 	vertical-align: middle;
 	font: bold 25px 'Consolas';
 	color: #d92731;
 	text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.5);
+}
 
+.site a.empty {
+	margin-top: 80px;
 }
 
 .contacts {
@@ -311,4 +322,23 @@ h2.tagstyle {
     width: 24px;
     height: 24px;
     background-position: -39px -39px;
+}
+
+// for dekstops
+@media only screen and (min-width: 901px) and (max-width: 1199px) {
+	.container {
+		width: 1200px;
+	}
+}
+// for tablets
+@media only screen and (min-width: 783px) and (max-width: 900px) {
+	.container {
+		width: 1000px;
+	}
+}
+//for smartfones
+@media only screen and (max-width: 782px) {
+	.container {
+		width: 750px;
+	}
 }
