--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,6 @@ body {
   width: 100%; }
 
 .container {
-  width: 1200px;
   padding: 0 15px;
   margin: 0 auto; }
 
@@ -94,7 +93,7 @@ body {
   width: 100%;
   height: 800px;
   border-top: 1px solid #3c3d38;
-  background: url(../img/home-bg.jpg) no-repeat;
+  background: url(../img/home-bg.jpg) no-repeat center center;
   background-size: cover; }
 
 .home-title {
@@ -297,14 +296,18 @@ h2.tagstyle {
   height: 24px;
   background-position: -39px -39px; }
 
-@media only screen and (min-width: 901px) and (max-width: 1199px) {
+@media only screen and (min-width: 1101px) {
   .container {
     width: 1200px; } }
 
+@media only screen and (min-width: 901px) and (max-width: 1100px) {
+  .container {
+    width: 1070px; } }
+
 @media only screen and (min-width: 783px) and (max-width: 900px) {
   .container {
-    width: 1000px; } }
+    width: 800px; } }
 
-@media only screen and (max-width: 782px) {
+@media only screen and (min-width: 320px) and (max-width: 782px) {
   .container {
-    width: 750px; } }
+    width: 500px; } }
