--- a/css/main.css
+++ b/css/main.css
@@ -147,6 +147,11 @@ body {
   width: 235px;
   height: 235px; }
 
+.about-me h3 {
+  font: bold 20px 'Consolas';
+  color: #d92731;
+  margin-top: 0; }
+
 .about-me {
   padding: 20px;
   font: 16px 'Consolas', sans-serif;
@@ -205,7 +210,7 @@ h2.tagstyle {
 .item-value::after {
   display: inline-block;
   content: ';';
-  padding-left: 5px;
+  padding-left: 0;
   font-style: normal;
   color: #fff; }
 
@@ -228,10 +233,7 @@ h2.tagstyle {
   overflow: hidden; }
 
 .site img {
-  display: block;
-  width: 370px;
-  height: 200px;
-  margin: 0 auto; }
+  max-width: 100%; }
 
 .site a {
   display: block;
@@ -264,7 +266,7 @@ h2.tagstyle {
 
 .contacts-section {
   display: block;
-  padding-left: 50px;
+  padding-left: 10px;
   height: 200px;
   font: 20px 'Consolas';
   color: #48beef;
@@ -308,6 +310,19 @@ h2.tagstyle {
   .container {
     width: 800px; } }
 
-@media only screen and (min-width: 320px) and (max-width: 782px) {
+@media only screen and (max-width: 782px) {
   .container {
-    width: 500px; } }
+    width: 100%;
+    padding: 0; }
+  .navigation {
+    display: none; }
+  .row {
+    margin: 0; }
+  .col-4, .col-3, .col-6 {
+    width: 100%; }
+  .about {
+    height: 1000px; }
+  .portfolio {
+    height: 700px; }
+  .second-row {
+    display: none; } }
