--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,8 @@ body {
 
 .container {
   padding: 0 15px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  margin-bottom: 50px; }
 
 .header {
   display: block;
@@ -134,14 +135,10 @@ body {
 
 .about {
   display: block;
-  width: 100%;
-  height: 700px; }
+  width: 100%; }
 
-.myphoto {
-  display: block;
-  width: 235px;
-  height: 235px;
-  margin: 20px auto; }
+.section-title {
+  margin-bottom: 50px; }
 
 .myphoto img {
   width: 235px;
@@ -156,9 +153,6 @@ body {
   padding: 20px;
   font: 16px 'Consolas', sans-serif;
   color: #fff; }
-
-.about .row {
-  margin-top: 50px; }
 
 .select-style {
   font: normal 20px/20px 'Consolas';
@@ -218,22 +212,18 @@ h2.tagstyle {
   color: #9981ff; }
 
 .portfolio {
-  width: 100%;
-  height: 550px; }
-
-.sites {
-  margin-top: 30px; }
+  width: 100%; }
 
 .site {
+  position: relative;
   display: block;
-  width: 100%;
-  height: 200px;
-  border: 1px solid #0b0b0a;
-  outline: 1px solid #3c3d38;
+  max-width: 100%;
+  margin: 15px 0;
   overflow: hidden; }
 
 .site img {
-  max-width: 100%; }
+  max-width: 100%;
+  vertical-align: bottom; }
 
 .site a {
   display: block;
@@ -244,13 +234,30 @@ h2.tagstyle {
   color: #d92731;
   text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.5); }
 
-.site a.empty {
-  margin-top: 80px; }
+.image-hover {
+  display: none;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8); }
+
+.image-hover h3 {
+  padding-top: 50px; }
+
+.site a:hover .image-hover {
+  display: block; }
 
 .contacts {
   display: block;
-  width: 100%;
-  height: 400px; }
+  width: 100%; }
+
+.myphoto {
+  display: block;
+  width: 235px;
+  height: 235px;
+  margin: 20px auto; }
 
 .contacts .col-4 {
   margin-left: 33%; }
@@ -300,15 +307,15 @@ h2.tagstyle {
 
 @media only screen and (min-width: 1101px) {
   .container {
-    width: 1200px; } }
+    max-width: 1200px; } }
 
 @media only screen and (min-width: 901px) and (max-width: 1100px) {
   .container {
-    width: 1070px; } }
+    max-width: 1070px; } }
 
 @media only screen and (min-width: 783px) and (max-width: 900px) {
   .container {
-    width: 800px; } }
+    max-width: 800px; } }
 
 @media only screen and (max-width: 782px) {
   .container {
@@ -319,10 +326,4 @@ h2.tagstyle {
   .row {
     margin: 0; }
   .col-4, .col-3, .col-6 {
-    width: 100%; }
-  .about {
-    height: 1000px; }
-  .portfolio {
-    height: 700px; }
-  .second-row {
-    display: none; } }
+    width: 100%; } }
