--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,8 @@ h2 {
 
 @font-face {
   font-family: 'Consolas';
-  src: url("../fonts/consolas.eot");
-  src: url("../fonts/consolas.eot?#iefix") format("embedded-opentype"), url("../fonts/consolas.woff") format("woff"), url("../fonts/consolas.ttf") format("truetype"), url("../fonts/consolas.svg#consolas") format("svg");
+  src: url("../fonts/Consolas.eot");
+  src: url("../fonts/Consolas.eot?#iefix") format("embedded-opentype"), url("../fonts/Consolas.woff") format("woff"), url("../fonts/Consolas.ttf") format("truetype"), url("../fonts/Consolas.svg#consolas") format("svg");
   font-weight: normal;
   font-style: normal; }
 
