--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,11 +4,11 @@ h2 {margin: 0}
 
 @font-face {
   font-family: 'Consolas';
-    src: url('../fonts/consolas.eot');
-    src: url('../fonts/consolas.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/consolas.woff') format('woff'),
-         url('../fonts/consolas.ttf') format('truetype'),
-         url('../fonts/consolas.svg#consolas') format('svg');
+    src: url('../fonts/Consolas.eot');
+    src: url('../fonts/Consolas.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Consolas.woff') format('woff'),
+         url('../fonts/Consolas.ttf') format('truetype'),
+         url('../fonts/Consolas.svg#consolas') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -360,7 +360,4 @@ vertical-align: bottom;
 	.col-4, .col-3, .col-6 {
 		width: 100%;
 	}
-	//.about {height: 1000px;}
-	//.portfolio {height: 700px;}
-	//.second-row {display: none;}
 }
