--- a/css/main.css
+++ b/css/main.css
@@ -57,12 +57,14 @@ body {
 
 .navigation li {
   display: block;
+  width: 155px;
+  text-align: center;
   list-style-type: none;
   float: left;
-  margin: 29px 0 0 30px; }
+  margin: 30px 0 0 0; }
 
 .navigation li:first-child {
-  margin-left: 0; }
+  width: 100px; }
 
 .navigation a {
   display: inline-block;
