--- a/css/main.css
+++ b/css/main.css
@@ -129,8 +129,8 @@ body {
   text-align: center;
   color: #d92731;
   background-color: #171814;
-  -webkit-box-shadow: 0 1px 0 0 #0b0b0a, 0 2px 0 0 #3c3d38;
-  box-shadow: 0 1px 0 0 #0b0b0a, 0 2px 0 0 #3c3d38; }
+  -webkit-box-shadow: 0 1px 0 0 #0b0b0a, 0 2px 0 0 #3c3d38, 0 -1px 0 0 #0b0b0a, 0 -2px 0 0 #3c3d38;
+  box-shadow: 0 1px 0 0 #0b0b0a, 0 2px 0 0 #3c3d38, 0 -1px 0 0 #0b0b0a, 0 -2px 0 0 #3c3d38; }
 
 .section-title h2 {
   padding-top: 16px; }
@@ -306,6 +306,22 @@ h2.tagstyle {
   width: 24px;
   height: 24px;
   background-position: -39px -39px; }
+
+footer {
+  display: block;
+  height: 50px;
+  text-align: center;
+  padding-top: 1px;
+  background-color: #171814;
+  -webkit-box-shadow: 0 -1px 0 0 #0b0b0a, 0 -2px 0 0 #3c3d38;
+  box-shadow: 0 -1px 0 0 #0b0b0a, 0 -2px 0 0 #3c3d38; }
+
+.author-info {
+  font: 15px 'Consolas';
+  color: #fff; }
+
+.athor-info span {
+  font-size: 20px; }
 
 @media only screen and (min-width: 1101px) {
   .container {
