--- a/sass/main.scss
+++ b/sass/main.scss
@@ -71,7 +71,6 @@ body {
 	list-style-type: none;
 	float: left;
 	margin: 30px 0 0 0;
-
 }
 
 .navigation li:first-child {width: 100px;}
@@ -141,7 +140,7 @@ body {
 	text-align: center;
 	color: #d92731;
 	background-color: #171814;
-	box-shadow: 0 1px 0 0 #0b0b0a, 0 2px 0 0 #3c3d38;
+	box-shadow: 0 1px 0 0 #0b0b0a, 0 2px 0 0 #3c3d38, 0 -1px 0 0 #0b0b0a, 0 -2px 0 0 #3c3d38;
 }
 
 .section-title h2 {padding-top: 16px;}
@@ -334,6 +333,23 @@ vertical-align: bottom;
     background-position: -39px -39px;
 }
 
+//FOTER////////////
+footer {
+	display: block;
+	height: 50px;
+	text-align: center;
+	padding-top: 1px;
+	background-color: #171814;
+	box-shadow: 0 -1px 0 0 #0b0b0a, 0 -2px 0 0 #3c3d38;
+}
+
+.author-info {
+	font: 15px 'Consolas';
+	color: #fff;
+}
+.athor-info span {
+	font-size: 20px;
+}
 // for dekstops
 @media only screen and (min-width: 1101px)  {
 	.container {
