--- a/sass/main.scss
+++ b/sass/main.scss
@@ -145,9 +145,9 @@ body {
 
 .section-title h2 {padding-top: 16px;}
 
-///////////////ABOUT///////////////////////////
+///////////////INFO///////////////////////////
 
-.about {
+.info {
 	display: block;
 	width: 100%;
 }
@@ -155,20 +155,7 @@ body {
 .section-title {
 	margin-bottom: 50px;
 }
-.myphoto img {
-	width: 235px;
-	height: 235px;
-}
-.about-me h3 {
-	font: bold 20px 'Consolas';
-	color: #d92731;
-	margin-top: 0;
-}
-.about-me {
-	padding: 20px;
-	font: 16px 'Consolas', sans-serif;
-	color: #fff;
-}
+
 
 .select-style {
 	font: normal 20px/20px 'Consolas';
@@ -273,8 +260,8 @@ vertical-align: bottom;
 }
 .site a:hover .image-hover {display: block;}
 
-//////////////CONTACTS///////////////////////////
-.contacts {
+//////////////ABOUT///////////////////////////
+.about{
 	display: block;
 	width: 100%;
 }
@@ -286,52 +273,21 @@ vertical-align: bottom;
 	margin: 20px auto;
 }
 
-.contacts .col-4 {margin-left: 33%;}
-
-.contacts-title {margin-top: 30px;}
-
-.contacts-title h2 {
-	text-align: center;
-	font: bold 30px  'Consolas', sans-serif;
-	color: #9981ff;
-	text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.5);
+.myphoto img {
+	width: 235px;
+	height: 235px;
+}
+.about-me h3 {
+	font: bold 20px 'Consolas';
+	color: #d92731;
+	margin-top: 0;
+}
+.about-me {
+	padding: 20px;
+	font: 16px 'Consolas', sans-serif;
+	color: #fff;
 }
 
-.contacts-section {
-	display: block;	
-	padding-left: 10px;
-	height: 200px;	
-	font: 20px 'Consolas' ;
-	color: #48beef;
-	border: 1px solid #0b0b0a;
-	outline: 1px solid #3c3d38;
-}
-
-.contacts-section p {margin: 10px auto;}
-
-.email, .phone, .skype{
-	margin: 0;
-	padding-left: 30px;
-}
-.skype {background: url(../img/skype12.png) no-repeat;}
-
-.social {
-    background-image: url(../img/spritesheet.png);
-    background-repeat: no-repeat;
-    display: block;
-}
-
-.social-email {
-    width: 24px;
-    height: 24px;
-    background-position: -5px -5px;
-}
-
-.social-phone {
-    width: 24px;
-    height: 24px;
-    background-position: -39px -39px;
-}
 
 //FOTER////////////
 footer {
