--- a/sites/mk/css/main.css
+++ b/sites/mk/css/main.css
@@ -78,7 +78,8 @@ body {
   color: #333333;
   position: relative;
   background-color: #000;
-  background: #000 url(../img/mainbg1.jpg) 32% 0 repeat-y; }
+  background: #000 url(../img/mainbg1.jpg) 32% 0 repeat-y;
+  background-attachment: fixed; }
 
 .hidden {
   display: none; }
@@ -116,7 +117,7 @@ header {
   padding-top: 10px;
   background-color: #000;
   height: 60px;
-  z-index: 999;
+  z-index: 9999;
   top: 0;
   left: 0;
   width: 100%; }
@@ -181,10 +182,45 @@ header {
 #fighters2 li {
   display: none; }
 
-.loose {
-  background: url(../img/blood.png) 50% 0 no-repeat;
+#fighters1 li {
+  position: relative; }
+
+#fighters1 li::before {
+  position: absolute;
+  content: '';
+  top: 10px;
+  right: -170px;
+  width: 94px;
+  height: 80px;
+  display: block;
+  background: url(../img/vs.png) 0 0 no-repeat;
   background-size: 80%;
+  z-index: 99; }
+
+.loose {
+  position: relative;
   opacity: 0.5; }
+  .loose button {
+    background-color: red;
+    color: white; }
+
+.loose::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 30px;
+  left: 50px;
+  z-index: 999;
+  height: 80px;
+  width: 250px;
+  background: url(../img/blood2.png) 50% 0 no-repeat; }
+
+#fighters1 .loose::after {
+  left: 100px; }
+
+#gen {
+  display: block;
+  margin: 0 auto; }
 
 /*********************************************		@IMPORT FOOTER
 \*********************************************/
