--- a/sites/mk/sass/main.scss
+++ b/sites/mk/sass/main.scss
@@ -20,6 +20,7 @@ body {
 	position: relative;
 	background-color: #000;
 	background: #000 url(../img/mainbg1.jpg) 32% 0 repeat-y;
+	background-attachment: fixed;
 }
 
 ////Удалить или закоментировать при адаптивном дизайне!//////////////
@@ -113,12 +114,48 @@ height: 2500px;}
 #fighters2 li:first-child{display: block;}
 #fighters1 li,
 #fighters2 li {display: none;}
-
-.loose {
-	background: url(../img/blood.png) 50% 0 no-repeat;
-	background-size: 80%;
-	opacity: 0.5;
+#fighters1 li {
+	position: relative;
 }
+#fighters1 li::before {
+	position: absolute;
+	content: '';
+	top:10px;
+	right: -170px;
+	width: 94px;
+	height: 80px;
+	display: block;
+	background: url(../img/vs.png) 0 0 no-repeat;
+	background-size: 80%;
+	z-index: 99;
+}
+.loose {
+	position: relative;
+	// background: url(../img/blood.png) 50% 0 no-repeat;
+	// background-size: 80%;
+	opacity: 0.5;
+	button {
+		background-color: red;
+		color:white}
+}
+.loose::after {
+	content:'';
+	display: block;
+	position: absolute;
+	top:30px;
+	left: 50px;
+	z-index: 999;
+	height: 80px;
+	width: 250px;
+	background: url(../img/blood2.png) 50% 0 no-repeat;
+	// background-size: 50%;
+}
+#fighters1 .loose::after {
+	left:100px;
+}
+#gen {
+	display: block;
+margin: 0 auto}
 /*********************************************\
 		@IMPORT FOOTER
 \*********************************************/
