--- a/mk/css/main.css
+++ b/mk/css/main.css
@@ -96,6 +96,9 @@ body {
   background: #000 url(../img/mainbg1.jpg) 32% 0 repeat-y;
   background-attachment: fixed; }
 
+.container {
+  width: 1140px !important;
+}
 .hidden {
   display: none; }
 
